# ferrisbot-for-discord

./: .dockerignore  .gitignore  .sops.yaml  CONTRIBUTING.md  Cargo.toml  Containerfile  LICENSE  README.md  Secrets.dev.toml.template  build.rs  compose.yaml  ferris.secrets.template.toml
.github/workflows/: ci.yml  deploy.yml
.sqlx/: query-06df9d056e9f962e1654d4443b111f6a5d99b2b88954f7e1e249a1db02956f59.json  query-09d434451e7cb2f30061fee242ed9c0bb4450aede5a50f3a936db21984e4afd7.json  query-177f03f483719b113d5d62079f3ffa491e4f53fb96e53226a40396f96c718368.json  query-28c93f1fbc240a5fd743e9ed64eb452b6e6b9d63dc9bfb0b8726029fe4f22b7f.json  query-3b7a8f519fca4713bcbc724451650809efc138caa6ac8e810c6bb2967301c451.json  query-4f3b5e0f26616ceb67decf7aac843e6217902c08f4027a6cadca89f229bd66ba.json  query-5f18b227446d9b7cb348b8ce81560a292261315c6612a030a14981b0dad8640a.json  query-5fcc14e1c37a0c31f9e5770d48fe00ef03ea6069794871193b691ba3df67be19.json  query-67dfc4b386a18a83c6b56f592efa154664c89652807c62dcd7c9f4c41359cfb8.json  query-6888ce41439597ad9076a21bd57f44df7d9d6d2b0363d5be3cea6fe459a20b24.json  query-6d7fba2f758948c2e7703ab748cae38c6c84a8a2ace0d12b987ad2cba4df58b4.json  query-82c80d9d64442aea24ac18dd788da212f56d9978e9ec8ab434091528bf14f2e1.json  query-89cc298e657432f389c418a433461861be68cf3cbc94151348f06077ce8cc2c1.json  query-92ea28f928623d3f1b06c5d1b131bd157d4934862dad18602e29f08538bbac10.json  query-9462e780f047d12aea75761c660cc21dd82239cc38d38c2464e6367beb8a7c8b.json  query-969089c4a5958e7eaca4929648ad463532e00bca71958d43afb505945a1ac781.json  query-a423bbe02614f6d1da813bc226400831ad54a4ae9296300581134045780376ce.json  query-a99d92c5875eba27c8455e24946561775d8df550643b24416b6f15e27667ec4c.json  query-a9f3f82cec2ea6bb788aef16d670aa7558b1f811f134624f51d76946419b87c7.json  query-ab9e4d20b1d986691aaf6bc5e584dea325170c888880e688d0ee60cd32201491.json  query-c07a0264aee4e102eb295844794d1b39f3143a9f0610f2cfa1d7f37785af9ca4.json  query-d623fb45f2be95006114bb30b4e806f7e091c9ee8478f2953778428b8731dcaa.json  query-f4626991679c0bd475797e1fd8c00799eede63172f0ee42e01265a4cdb83da43.json  query-f6e26164cb3498d0a9fcdd28b8a9ed8d4e138e588c7d8a384b40ba1d70cca421.json
config/: ferris.secrets.template.toml  ferris.template.toml
deploy/prod/ferrisbot/: backup.secrets.yaml  ferrisbot.secrets.yaml  ferrisbot.yaml  ghcr.secrets.yaml  kustomization.yaml  litestream.yaml  namespace.yaml
deploy/prod/flux-system/: gotk-sync.yaml  kustomization.yaml
deploy/prod/flux-system/helm/: hetzner.yaml
deploy/prod/hcloud/: secrets.yaml
migrations/: 0001_init.sql  0002_create_highlights.sql  0003_create_tags.sql
src/: checks.rs  commands.rs  crates.rs  godbolt.rs  helpers.rs  lib.rs  main.rs  misc.rs  moderation.rs  playground.rs  types.rs  whitelist.channels
src/commands/: advent_of_code.rs  crates.rs  godbolt.rs  highlight.rs  man.rs  misc.rs  moderation.rs  modmail.rs  moving.rs  playground.rs  tags.rs  thread_pin.rs  utilities.rs
src/commands/crates/: tests.rs
src/commands/godbolt/: targets.rs
src/commands/playground/: api.rs  microbench.rs  misc_commands.rs  play_eval.rs  procmacro.rs  util.rs
src/godbolt/: targets.rs
