[package]
name = "ferrisbot-for-discord"
version = "0.1.0"
authors = [
    "kangalioo",
    "technetos <mrgould93@gmail.com>",
    "Ivan Dardi <ivanbdardi@gmail.com>",
]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-runtime = "0.51.0"
shuttle-serenity = "0.51.0"
shuttle-shared-db = { version = "0.51.0", features = ["postgres", "sqlx"] }
poise = "0.6"
anyhow = "1.0"
tokio = "1.28"
tracing = "0.1.37"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.3", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "macros",
] }
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }
image = { version = "0.24", default-features = false, features = [
    "png",
] } # get a better computer meme rendering
imageproc = { version = "0.23", default-features = false } # get a better computer meme rendering
rusttype = { version = "0.9", default-features = false } # interact with imageproc
rand = "0.8.5"
syn = { version = "2.0.68", features = ["full"] }
itertools = "0.12.0"
futures = "0.3.31"
proc-macro2 = { version = "1.0.93", features = ["span-locations"] }
