[package]
name = "ferrisbot-for-discord"
version = "0.1.0"
authors = [
  "kangalioo",
  "technetos <mrgould93@gmail.com>",
  "Ivan Dardi <ivanbdardi@gmail.com>",
]
edition = "2024"
license = "MIT"

[dependencies]
ab_glyph = { version = "0.2", default-features = false }
anyhow = "1.0"
futures = "0.3.31"
image = { version = "0.25", default-features = false, features = ["png"] }
imageproc = { version = "0.25", default-features = false }
itertools = "0.14"
poise = { version = "0.6", default-features = false, features = [
  "default",
  "handle_panics",
] }
proc-macro2 = { version = "1.0.95", features = ["span-locations"] }
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shuttle-runtime = "0.56.0"
shuttle-serenity = "0.56.0"
shuttle-shared-db = { version = "0.56.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.8.6", features = [
  "macros",
  "postgres",
  "runtime-tokio",
  "tls-rustls",
] }
syn = { version = "2.0.104", default-features = false, features = [
  "full",
  "parsing",
  "printing",
] }
tokio = "1.47"
tracing = "0.1.41"
implicit-fn = "0.1.0"
regex = { version = "1.11.1", default-features = false, features = ["perf"] }
regex-syntax = "0.8.5"
